Fix grey background behind selection checkbox

--- a/apps/files/css/files.scss
+++ b/apps/files/css/files.scss
@@ -814,6 +814,7 @@ table.dragshadow td.size {
 				display: flex;
 				width: 44px;
 				z-index: 10;
+				background: transparent;
 
 				label {
 					width: 44px;
